# naestro

./: .coveragerc  .env.example  .gitignore  .markdown-link-check.json  .markdownlint.jsonc  .markdownlintignore  .mlc.config.json  .pre-commit-config.yaml  .prettierrc.json  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRAPHITI.md  LICENSE  Makefile  README.md  REFERENCES.md  RELEASE_NOTES.md  RELEASING.md  ROADMAP.md  SECURITY.md  VISION.md  WHITEPAPER.md  codecov.yml  commitlint.config.cjs  docker-compose.inference.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt  whitepaper.md
.devcontainer/: devcontainer.json
.githooks/: commit-msg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-please.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-full-and-smoke.yml  ci.yml  codeql.yml  codex-exec.yml  commit-messages.yml  dep-verify.yml  docs-lint.yml  nightly.yml  pr-title.yml  recheck.yml  release.yml  (+3 more)
config/: .env.example  alerts.yml  otel-config.yaml  prometheus.yml  providers.yaml
configs/: debate.json  evals.yaml  models.yaml  plugins.yaml  policies_basic.yaml  router_profiles.yaml  routing.json  runtime.yaml  runtimes.yaml  trading.json  trading_demo.yaml
docs/: APPLE_MODELS.md  DEPLOY_MULTI_NODE.md  DEPLOY_SINGLE_NODE.md  GRAPHITI.md  INTEGRATIONS.md  NO_PROXY.md  NO_REPLIT_DEPLOY.md  Naestro_ROADMAP.md  README.md  UI_API_CONTRACT.md  USER_MANUAL.md  VS_CODE_EXTENSION.md  architecture.mmd  examples.md  orchestrator_collaboration.md  pii_calibration.md
evaluators/: __init__.py  runner.py
examples/: __init__.py  cli.py  debate_quickstart.py  governed_pipeline.py  routing_profiles.py
hardware/: mig-setup.service  pin-resources.sh
infra/: __init__.py  determinism.py
jobs/: pii_calib_set.json  pii_calibrate.py
naestro/: __init__.py  cli.py
orchestrator/: planner.py
packs/: __init__.py
policy/: engine.yaml  voice.yaml
registry/: tools.json
router/: __init__.py  collab_policy.py  router.py
schemas/: plan.schema.json
scripts/: governor.py  install_nltk_data.py  pin-resources.sh  run_evals.py  run_router_ppo.py  validate-dgx-deployment.js
server/: main.py  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sql/: schema.sql
src/: rag.py  tts.py  tts_azure.py  tts_elevenlabs.py  tts_piper.py  tts_playht.py  tts_riva.py
studio/: README.md
tests/: conftest.py  test_debate_basic.py  test_examples.py  test_gateway.py  test_gateway_errors.py  test_gateway_streams.py  test_gateway_success.py  test_governor.py  test_math_agent.py  test_math_agent_errors.py  test_message_bus.py  test_orchestrator.py  test_orchestrator_main_extra.py  test_orchestrator_nltk_shim.py  test_orchestrator_utils.py  test_pii_calibrate.py  test_rag.py  test_rag_init_twice.py  test_roles_registry.py  test_router_selection.py  test_smoke.py  test_utils_token.py
ui/: .eslintrc.cjs  CHANGELOG.md  Dockerfile  eslint.config.js  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.mjs  vitest.setup.js
(+171 files in other folders)
