[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naestro-lite"
version = "0.1.0"
description = "Deterministic debate orchestration and trading pipeline utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
    { name = "Naestro Contributors" },
]
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["naestro", "naestro.*", "packs", "packs.*"]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "ruff>=0.1.9",
]

[project.scripts]
naestro = "naestro.cli:main"

[tool.black]
line-length = 88
preview = true

[tool.ruff]
line-length = 88
src = ["naestro", "packs", "examples", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["naestro", "packs", "examples"]
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["naestro", "packs"]
omit = [
    "**/__main__.py",
    "**/settings.py",
    "**/config.py",
    "**/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
]
