[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naestro-lite"
version = "0.1.0"
description = "Deterministic debate orchestration and trading pipeline utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typing-extensions>=4.10",
    "jsonschema>=4.22",
]
authors = [
    { name = "Naestro Contributors" },
]
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["naestro", "naestro.*", "packs", "packs.*"]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.4.8",
]

[project.scripts]
naestro = "examples.cli:main"

[tool.black]
line-length = 88
preview = true

[tool.ruff]
line-length = 88
src = ["naestro", "packs", "examples", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B905"]

[tool.ruff.lint.isort]
from-first = true
force-sort-within-sections = true
order-by-type = false
known-first-party = ["naestro", "packs", "examples", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["naestro", "packs", "examples"]
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["naestro", "packs"]
omit = [
    "**/__main__.py",
    "**/settings.py",
    "**/config.py",
    "**/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
]
